--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "furniture-shop",
+  "name": "furniture",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.31",
+    "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue3-carousel": "^0.1.38",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -25,8 +22,6 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "eslint-plugin-vue": "^8.0.3"
   }
 }
